[package]
name = "portfolio"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["fs","trace"] }
axum = { version = "0.7", features = ["multipart"] }
hyper = { version = "0.14", features = ["full", "server"] }
