[package]
name = "portfolio"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
sqlx = { version = "0.6.0", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["multipart", "macros"] }
tower-http = { version = "0.6.6", features = ["fs","trace"] }
tower-cookies = {version = "0.10.0"}

